[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "crystal-cell-setter"
version = "0.1.4"
authors = [
  { name="HiroYokoyama", email="titech.yoko.hiro@gmail.com" },
]
description = "A GUI tool to set and adjust unit cell parameters for molecular structures."
readme = "README.md" 
license = { text = "Apache-2.0" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Environment :: X11 Applications :: Qt",
]

requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pyvista",
    "PyQt6",
    "pyvistaqt",
    "ase",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/HiroYokoyama/crystal-cell-settler"
Repository = "https://github.com/HiroYokoyama/crystal-cell-settler"

[project.scripts]
crystal-cell-settler = "crystal_cell_setter.main:run_app"


